<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="madri.me.vanilai.activity.ForecastActivity"
    android:background="@drawable/bg_gradient">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="100"
        android:id="@+id/linearLayout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hourly_button"
            android:id="@+id/hourlyForecast"
            android:layout_weight="50"
            android:textSize="18sp"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textAllCaps="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly_button"
            android:id="@+id/weeklyForecastButton"
            android:layout_weight="50"
            android:textSize="18sp"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textAllCaps="true"/>
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refresh"
        android:textColor="@android:color/white"
        android:src="@drawable/ic_replay_white_24dp"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/refresh_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_location"
        android:textColor="@android:color/white"
        android:id="@+id/location"
        android:layout_below="@+id/refresh"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_temperature"
        android:textColor="@android:color/white"
        android:id="@+id/temperature"
        android:layout_below="@+id/location"
        android:layout_margin="40dp"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\u00b0F"
        android:id="@+id/temperatureSwitch"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_below="@+id/temperature"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureSwitch"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:weightSum="100"
        android:id="@+id/linearLayout"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:layout_weight="50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/humidity_label"
                android:textColor="@android:color/white"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_gravity="center"
                android:id="@+id/humidityLabel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_humidity"
                android:textColor="@android:color/white"
                android:id="@+id/humidity"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/precipitation_label"
                android:textColor="@android:color/white"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_gravity="center"
                android:id="@+id/precipitationLabel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_precip"
                android:textColor="@android:color/white"
                android:id="@+id/precipitation"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_weather_description"
        android:textColor="@android:color/white"
        android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
        android:id="@+id/weatherDescription"
        android:layout_margin="20dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/earthquakeDetected"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/get_earthquake_information"
        android:gravity="center"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_time"
        android:textColor="@android:color/white"
        android:id="@+id/currentTime"
        android:layout_above="@+id/location"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:layout_alignParentTop="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentWeatherImage"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/location"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/current_weather_image"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addButton"
        android:layout_above="@+id/location"
        android:layout_toLeftOf="@+id/settingsButton"
        android:src="@drawable/ic_add_white_24dp"
        android:background="@android:color/transparent"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/action_settings"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsButton"
        android:layout_above="@+id/location"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_settings_white_24dp"
        android:background="@android:color/transparent"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/action_add_string"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_above="@+id/earthquakeDetected"
        android:layout_below="@+id/weatherDescription"/>

</RelativeLayout>
