<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="madri.me.vanilai.fragment.PlaceholderFragment"
                android:background="@drawable/bg_gradient">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:weightSum="100"
        android:showDividers="middle"
        android:id = "@+id/forecast_layout"
        android:layout_below="@+id/earthquakeDetected">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hourly_button"
            android:id="@+id/hourlyForecast"
            android:layout_gravity="bottom"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:layout_weight="50"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/weekly_button"
            android:id="@+id/weeklyForecastButton"
            android:layout_gravity="bottom"
            android:background="@android:color/transparent"
            android:layout_weight="50"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refresh"
        android:textColor="@android:color/white"
        android:src="@drawable/ic_replay_white_24dp"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/refresh_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_location"
        android:textColor="@android:color/white"
        android:id="@+id/location"
        android:layout_below="@+id/refresh"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_temperature"
        android:textColor="@android:color/white"
        android:id="@+id/temperature"
        android:layout_below="@+id/location"
        android:layout_margin="40dp"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureSwitch"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:weightSum="100"
        android:id="@+id/linearLayout"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:layout_weight="50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/humidity_label"
                android:textColor="@android:color/white"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_gravity="center"
                android:id="@+id/humidityLabel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_humidity"
                android:textColor="@android:color/white"
                android:id="@+id/humidity"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/precipitation_label"
                android:textColor="@android:color/white"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_gravity="center"
                android:id="@+id/precipitationLabel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_precip"
                android:textColor="@android:color/white"
                android:id="@+id/precipitation"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_weather_description"
        android:textColor="@android:color/white"
        android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
        android:id="@+id/weatherDescription"
        android:layout_margin="20dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/earthquakeDetected"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        android:text="@string/get_earthquake_information"
        android:layout_below="@+id/weatherDescription"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_time"
        android:textColor="@android:color/white"
        android:id="@+id/currentTime"
        android:layout_above="@+id/location"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:layout_alignEnd="@+id/location"
        android:layout_alignParentTop="true"
        android:textAlignment="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentWeatherImage"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/location"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/current_weather_image"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\u00b0F"
        android:id="@+id/temperatureSwitch"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_below="@+id/temperature"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

</RelativeLayout>
